--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@chakra-ui/react": "^1.6.8",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
+    "@fingerprintjs/fingerprintjs": "^3.3.0",
+    "axios": "^0.22.0",
     "framer-motion": "^4",
     "next": "11.1.2",
+    "next-iron-session": "^4.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
