--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "framer-motion": "^4",
     "next": "11.1.2",
     "next-iron-session": "^4.2.0",
+    "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.24.5",
+    "react-visibility-sensor": "5.1.1",
     "swiper": "^7.0.7"
   },
   "devDependencies": {
