--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.24.5",
+    "react-simple-image-viewer": "^1.1.1",
     "react-visibility-sensor": "5.1.1",
     "sharp": "^0.29.1",
     "swiper": "^7.0.7"
