--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.22.0",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "next": "11.1.2",
     "next-iron-session": "^4.2.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-query": "^3.24.5",
     "react-simple-image-viewer": "^1.1.1",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.26",
+    "@types/react-html-parser": "^2.0.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
