--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11",
     "@fingerprintjs/fingerprintjs": "^3.3.0",
     "axios": "^0.22.0",
+    "formik": "^2.2.9",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
@@ -28,7 +29,8 @@
     "react-simple-image-viewer": "^1.1.1",
     "react-visibility-sensor": "5.1.1",
     "sharp": "^0.29.1",
-    "swiper": "^7.0.7"
+    "swiper": "^7.0.7",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
