--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fingerprintjs/fingerprintjs": "^3.3.0",
+    "await-to-js": "^3.0.0",
     "axios": "^0.22.0",
     "formik": "^2.2.9",
     "framer-motion": "^4",
