--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fingerprintjs/fingerprintjs": "^3.3.0",
     "await-to-js": "^3.0.0",
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "formik": "^2.2.9",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "next": "11.1.2",
+    "next-connect": "^0.11.0",
     "next-iron-session": "^4.2.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
@@ -34,6 +36,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/react": "17.0.26",
     "@types/react-html-parser": "^2.0.2",
     "eslint": "7.32.0",
