--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.4.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
+    "react-paginate": "^8.0.0",
     "react-query": "^3.24.5",
     "react-simple-image-viewer": "^1.1.1",
     "react-visibility-sensor": "5.1.1",
@@ -39,6 +41,7 @@
     "@types/cors": "^2.8.12",
     "@types/react": "17.0.26",
     "@types/react-html-parser": "^2.0.2",
+    "@types/react-paginate": "^7.1.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
