--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
+    "react-highlight-words": "^0.17.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.2.0",
     "react-paginate": "^8.0.0",
     "react-query": "^3.24.5",
+    "react-quill": "^1.3.5",
     "react-simple-image-viewer": "^1.1.1",
     "react-visibility-sensor": "5.1.1",
     "sharp": "^0.29.1",
@@ -40,6 +42,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/react": "17.0.26",
+    "@types/react-highlight-words": "^0.16.3",
     "@types/react-html-parser": "^2.0.2",
     "@types/react-paginate": "^7.1.1",
     "eslint": "7.32.0",
