--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-iron-session": "^4.2.0",
     "query-string": "^7.0.1",
     "react": "17.0.2",
+    "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.4.2",
     "react-highlight-words": "^0.17.0",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/react": "17.0.26",
+    "@types/react-datepicker": "^4.3.2",
     "@types/react-highlight-words": "^0.16.3",
     "@types/react-html-parser": "^2.0.2",
     "@types/react-paginate": "^7.1.1",
